--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,7 @@
     "axios": "^1.7.3",
     "eslint": "^9.8.0",
     "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "moment": "^2.30.1",
